--- a/Views/DynamicViewWindow.xaml
+++ b/Views/DynamicViewWindow.xaml
@@ -5,7 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:FullControl.Views"
         mc:Ignorable="d"
-        Title="Tela Dinâmica">
+        Title="Tela Dinâmica"
+        Unloaded="DynamicViewWindow_Unloaded">
     <Grid>
         <Canvas x:Name="MainCanvasHost">
         </Canvas>
